# practice-ddd-python

./: Dockerfile  README.md  config.py  conftest.py  docker-compose.yml  makefile  pyproject.toml  requirements.txt
src/: flask_app.py  model.py  orm.py  repository.py  sync.py
src/allocation/: config.py
src/allocation/adapters/: orm.py  repository.py
src/allocation/entrypoints/: flask_app.py
tests/: conftest.py  test_allocates.py  test_api.py  test_batches.py  test_orm.py  test_repository.py  test_sync.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py
tests/unit/: test_allocates.py  test_batches.py
